--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             <div class = "col">
                 <a class="rounded float-start" alt="..." class="btn btn-primary" href="https://codeforces.com/profile/DEEKSHITHA-K" role="button"><img src="images/codeforces.png" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-start"></a>
             </div>
+            <div class = "col">
+                <a class="rounded float-start" alt="..." class="btn btn-primary" href="https://codeforces.com/profile/DEEKSHITHA-K" role="button"><img src="images/codeforces.png" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-start"></a>
+            </div>
+            <div class = "col">
+                <a class="rounded float-start" alt="..." class="btn btn-primary" href="https://codeforces.com/profile/DEEKSHITHA-K" role="button"><img src="images/codeforces.png" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-start"></a>
+            </div>
         </div> 
 
     </div>  
