--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <h1 class="text-center" style="padding-top: 50px";>PROJECTS AND PROFILE</h1>
         <div class = "row" style= "padding-top: 25px;">
             <div class = "col">
-                <a class="rounded float-end" alt="..." class="btn btn-primary" href="https://wow-martial-art-game.glitch.me/" role="button"><img src="https://www.pgs-soft.com/app/uploads/2016/07/Blog-HTML5-Canvas-01-01.png" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-end" alt="..."></a>
+                <a class="rounded float-end" alt="..." class="btn btn-primary" href="https://martial-art-game.netlify.app/" role="button"><img src="https://www.pgs-soft.com/app/uploads/2016/07/Blog-HTML5-Canvas-01-01.png" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-end" alt="..."></a>
             </div>
             <div class = "col">
-                <a class="rounded mx-auto d-block" alt="..." class="btn btn-primary" href="https://wow--calculator.glitch.me/" role="button"><img src="https://th.bing.com/th/id/R.7b0b81bc46fddbd8d2d3673226ee076e?rik=%2fmg5IWBysWWeeQ&riu=http%3a%2f%2ficons.iconarchive.com%2ficons%2fiynque%2fios7-style%2f1024%2fCalculator-icon.png&ehk=LowAZBKaEIrMjLOfu6xZo%2f0xLqZ9hACvi4EhYUdM4Qo%3d&risl=&pid=ImgRaw&r=0" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded mx-auto d-block"></a>
+                <a class="rounded mx-auto d-block" alt="..." class="btn btn-primary" href="https://wow-calculator.netlify.app/" role="button"><img src="https://th.bing.com/th/id/R.7b0b81bc46fddbd8d2d3673226ee076e?rik=%2fmg5IWBysWWeeQ&riu=http%3a%2f%2ficons.iconarchive.com%2ficons%2fiynque%2fios7-style%2f1024%2fCalculator-icon.png&ehk=LowAZBKaEIrMjLOfu6xZo%2f0xLqZ9hACvi4EhYUdM4Qo%3d&risl=&pid=ImgRaw&r=0" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded mx-auto d-block"></a>
             </div>
             <div class = "col">
-                <a class="rounded float-start" alt="..." class="btn btn-primary" href="https://random-face-generator.glitch.me/" role="button"><img src="https://th.bing.com/th/id/OIP.957IRITd_1nRssZDoT20hAHaFj?pid=ImgDet&w=600&h=450&rs=1" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-start"></a>
+                <a class="rounded float-start" alt="..." class="btn btn-primary" href="https://random-face-generator.netlify.app/" role="button"><img src="https://th.bing.com/th/id/OIP.957IRITd_1nRssZDoT20hAHaFj?pid=ImgDet&w=600&h=450&rs=1" style = "width : 200px; height :120px; margin-bottom: 5px;" class="rounded float-start"></a>
             </div>
         </div>
     </div> 
